--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                         <div class="buttonsContainer">
                             <!-- Row 1 -->
                             <div class="buttonsRow">
-                                <input type="button" value="AC" class="accentBackgroundColor">
-                                <input type="button" value="DEL">
-                                <input type="button" value="(-)">
-                                <input type="button" value="/" class="accentFontColor">
+                                <input type="button" value="AC" class="accentBackgroundColor" id="ac">
+                                <input type="button" value="DEL" id="delete">
+                                <input type="button" value="(-)" id="negative">
+                                <input type="button" value="/" id="divide" class="accentFontColor">
                             </div>
                             <!-- Row 2 -->
                             <div class="buttonsRow">
